--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
-spring.application.name=examen2
-spring.datasource.url=jdbc:postgresql://localhost:5432/examen2
-spring.datasource.username=postgres
-spring.datasource.password=LinaReal
-spring.datasource.driver-class-name=org.postgresql.Driver
-spring.jpa.hibernate.ddl-auto=update 
+spring.application.name=Examen2
+spring.datasource.url=jdbc:sqlserver://serversqlazureli.database.windows.net:1433;database=Examen2;user=Adminbd@serversqlazureli;password={Admin123*};encrypt=true;trustServerCertificate=false;hostNameInCertificate=*.database.windows.net;loginTimeout=30;
+spring.datasource.username=Adminbd@serversqlazureli
+spring.datasource.password=Admin123*
+spring.datasource.driver-class-name=com.microsoft.sqlserver.jdbc.SQLServerDriver
+spring.jpa.hibernate.ddl-auto=update
